Fix spacing consistency between headings and subtitles again

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -107,7 +107,7 @@ $spacing-section: 4rem;
   font-size: $font-size-h1;
   font-weight: 700;
   line-height: 1.2;
-  margin-bottom: 0;
+margin-bottom: 1rem;
   padding-bottom: 0;
   margin-top: 0;
   overflow: visible;
